--- a/MANIFEST/ENGINE_MANIFEST.json
+++ b/MANIFEST/ENGINE_MANIFEST.json
@@ -3,7 +3,10 @@
   "engine_code": "THERMOS",
   "engine_name": "Thermal Dynamics Engine",
   "engine_role": "TRUTH_ENGINE",
-  "domain": "THERMAL",
+  "domain": {
+    "domain_class": "OTHER",
+    "domain_detail": "THERMAL_DYNAMICS"
+  },
   "engine_version": "1.0.0",
   "invariants": {
     "deterministic": true,
@@ -22,7 +25,18 @@
     "sealing_spec_file": "SEALING/SEALING_SPEC.md",
     "canonical_json": true,
     "hash_algo": "sha256",
-    "hash_canonicalization": "json_text"
+    "hash_canonicalization": "JCS_RFC8785"
+  },
+  "artifact_bundle": {
+    "manifest_files": [
+      "MANIFEST/ENGINE_MANIFEST.json",
+      "MANIFEST/INPUT_SCHEMA.json",
+      "MANIFEST/OUTPUT_SCHEMA.json",
+      "MANIFEST/COUPLING_RULES.json",
+      "SEALING/SEALING_SPEC.md",
+      "GOVERNANCE/ENGINE_GOVERNANCE.md",
+      "CAPABILITIES/PHYSICS_CAPABILITIES.md"
+    ]
   },
   "compatibility": {
     "core_min_version": "1.0.0",
@@ -34,5 +48,5 @@
     ]
   },
   "outputs_are_interpretation": false,
-  "notes": "Produces raw thermal domain outputs only. No policy classification."
+  "notes": "Produces raw thermal outputs only. No medical/clinical/safety verdicts or directives."
 }
